Doy una corrección a todo (#49)

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -140,7 +140,8 @@
 
 %% OPTIONAL - Max 10-15 pages in total
 
-\chapter{Appendix title}
+\chapter{Documentación del código JavaScript}
+\label{appendix:javascript}
 
 \chapter{Another Appendix}
 
