--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -43,6 +43,7 @@
 \newtheorem{lema}{Lema}[section]
 
 \newcommand{\diam}[0]{\mathrm{diam}}
+\newcommand{\rad}[0]{\mathrm{rad}}
 \newcommand{\diminf}[0]{\underline{\dim}_B}
 \newcommand{\dimsup}[0]{\overline{\dim}_B}
 \renewcommand{\Re}[0]{\mathrm{Re}\ }
