Iniciado capítulo 8, hasta Ray-Marching (#49)

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -120,6 +120,12 @@
 
 \import{tex/capitulos/}{capitulo-7.tex}
 
+\chapter{Visualización de fractales en 3D}
+\label{chap:fractales-3D}
+
+
+\import{tex/capitulos/}{capitulo-8.tex}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % REFERENCIAS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
