--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -24,7 +24,9 @@
 \usepackage{hyperref}
 \usepackage{array}
 \usepackage{verbatim}
+\usepackage{algorithm}
 \usepackage{algpseudocode}
+%\usepackage[]{algorithm2e}
 \usepackage[spanish, es-tabla]{babel}
 \decimalpoint
 
