Finalizada sección sobre ray-marching (#49)

--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -47,4 +47,6 @@
 
 \bibitem{RT-que-es} López, P. (2020, 30 abril). \textit{Ray Tracing: ¿Qué es y para qué sirve? - Definición}. GEEKNETIC. \url{https://www.geeknetic.es/Ray-Tracing/que-es-y-para-que-sirve}
 
+\bibitem{Hart-1995} Hart, J. (1995). Sphere Tracing: A Geometric Method for the Antialiased Ray Tracing of Implicit Surfaces. \textit{The Visual Computer}. \url{https://doi.org/10.1007/s003710050084}
+
 \end{thebibliography}
