--- a/memoria/tex/capitulos/capitulo-8.tex
+++ b/memoria/tex/capitulos/capitulo-8.tex
@@ -9,10 +9,9 @@ Para ello, antes aún debemos asentar una serie de conceptos que son los que nos
 \section{El algoritmo Ray-Marching}
 \label{section:ray-arching}
 
-Hasta ahora siempre hemos calculado las intersecciones rayo-esfera de manera totalmente analítica, ya que es muy sencillo describir una esfera o un plano mediante una ecuación y solucionar esta ecuación en $t$, como vimos en las secciones \ref{subsection:esfera} y \ref{subsection:plano}. Sin embargo, no es tan sencillo encontrar ecuaciones que describan la superficie de los fractales. Es por esto que necesitamos otra manera de encontrar las intersecciones rayo-superficie. Aunque no tengamos una forma de calcular analíticamente la intersección, si contamos con funciones que nos estiman, fijado un punto, a qué distancia se halla este punto del fractal mediante una cota, las conocidas como SDFs. De igual manera, si fijamos un punto $p\in\R^3$, podemos calcular a qué distancia se encuentra dicho punto de una esfera o de un plano. 
-% TODO Referenciar seccion de SDFs
+Hasta ahora siempre hemos calculado las intersecciones rayo-esfera de manera totalmente analítica, ya que es muy sencillo describir una esfera o un plano mediante una ecuación y solucionar esta ecuación en $t$, como vimos en las secciones \ref{subsection:esfera} y \ref{subsection:plano}. Sin embargo, no es tan sencillo encontrar ecuaciones que describan la superficie de los fractales. Es por esto que necesitamos otra manera de encontrar las intersecciones rayo-superficie. Aunque no tengamos una forma de calcular analíticamente la intersección, si contamos con funciones que nos estiman, fijado un punto, a qué distancia se halla este punto del fractal mediante una cota, las conocidas como SDFs (sección \ref{section:SDFs}). De igual manera, si fijamos un punto $p\in\R^3$, podemos calcular a qué distancia se encuentra dicho punto de una esfera o de un plano. 
 
-El algoritmo \textit{Ray-Marching}, también conocido como \textit{Sphere-Tracing} es una técnica utilizada en Ray-Tracing y que se basa en estimar la distancia a la que se encuentra un punto de cada una de las superficies que componen la escena y avanzar en el rayo una distancia correspondiente a la mínima de estas distancias, pues se tiene la certeza de que al menos en una esfera de radio dicha distancia no hay ninguna intersección con ningún otro cuerpo. Una vez se ha avanzado en el rayo se repite esta operación y así sucesivamente hasta que la estimación de la distancia es lo suficientemente pequeña como para considerar que el punto interseca con la superficie.
+El algoritmo \textit{Ray-Marching}, también conocido como \textit{Sphere-Tracing} es una técnica utilizada en Ray-Tracing y que se basa en estimar la distancia a la que se encuentra un punto de cada una de las superficies que componen la escena y avanzar en el rayo una distancia correspondiente a la mínima de estas distancias, pues se tiene la certeza de que al menos en una esfera de radio dicha distancia no hay ninguna intersección con ningún otro cuerpo. Una vez se ha avanzado en el rayo se repite esta operación y así sucesivamente hasta que la estimación de la distancia es lo suficientemente pequeña como para considerar que el punto interseca con la superficie. Los fundamentos matemáticos de este método y las propiedades que deben cumplir las funciones estimadoras se pueden encontrar en \cite{Hart-1995}. 
 
 Pongamos un ejemplo. Supongamos que tenemos una escena con una esfera tangente al plano horizontal $y=0$, un rayo $R$ fijo y queremos aplicar Ray-Marching para encontrar la intersección.
 
@@ -98,5 +97,153 @@ Veámos ahora cómo podemos llevarnos todos estos nuevos conocimientos a la GPU 
 Lo primero que necesitaremos es una función que calcule la distancia de un punto a una esfera $S$. Esto es tan sencillo como implementar una función que calcule la fórmula \ref{eq:distancia-punto-esfera}.
 
 \begin{lstlisting}
-    
+// Dada una esfera S y un punto p, calcula la distancia
+// del punto a la superficie de la esfera
+float get_dist_sphere(vec3 p, Sphere S){
+    return length(S.center - p) - S.radius;
+}
 \end{lstlisting}
+
+Por parte del plano, podríamos aprovechar que nuestro plano es el $y=-2$ y simplemente devolver la componente $y$ del punto más dos. Sin embargo, no cuesta tanto calcular la distancia de un punto a un plano arbitrario $Ax+By+Cz = D$, siendo $\vec N=(A,B,C)$ el vector normal al plano. El punto perteneciente a un plano más cercano a otro punto $p$ dado es aquel que interseca con la recta cuyo vector director es el normal al plano y que pasa por $p$. Es decir, el punto de la recta $S(t)=p+\vec Nt$ que satisface la ecuación $(A,B,C)\cdot (x,y,z) = D$. Veámos para qué $t$ se satisfacen las ecuaciones.
+\begin{equation}
+    \begin{split}
+        \vec N\cdot S(t) &= D \\
+        \vec N\cdot (p+\vec N t) &= D \\
+        t &= \dfrac{D-\vec N \cdot p}{|\vec N|^2}
+    \end{split}
+\end{equation}
+Por tanto la distancia entre punto y plano es la longitud del vector que une a $p$ con $S(t)$, siendo este $t$ el recién calculado. El código entonces sería:
+\begin{lstlisting}
+// Dado un plano P y un punto p, calcula la distancia del 
+// punto p a la superficie del plano.
+float get_dist_plane (vec3 p, Plane P) {
+    float t_interseccion = (P.D - dot(P.normal,p))/dot(P.normal, P.normal);
+    vec3 closest_point = p + t_interseccion * P.normal;
+    return length(p-closest_point);
+}
+\end{lstlisting}
+
+Seguidamente necesitamos fijar dos constantes: el número máximo de iteraciones que se darán en el algoritmo y $\varepsilon$, la distancia mínima por debajo de la misma se considera que un punto pertenece a la superficie. La primera de ellas la podemos tomar como una macro, al igual que hicimos con el tamaño de los arrays, pero la segunda interesa que sea parametrizable, para así poder observar los niveles de detalle y qué variaciones experimenta la escena al modificar este valor. Por ello, usamos una variable \verb|uniform| a la que pasaremos valor vía JavaScript.
+
+\begin{lstlisting}
+    uniform float u_epsilon;
+    // ... 
+    #define MAX_STEPS 1000
+\end{lstlisting}
+
+Y ya tenemos todo preparado para implementar el Ray-Marching. La función que dado un rayo calcula posibles intersecciones con los cuerpos y asigna un color en función es \verb|ray_color|, por lo que lo más natural es editar el código de esta función. En lugar de llamar a \verb|hit_sphere_list| y \verb|hit_plane| como hicimos en la sección \ref{subsection:plano} aplicaremos Ray-Marching. Como GLSL no nos permite mantener un array heterogéneo en el que almacenar todos los objetos independientemente de su tipo, tenemos que hacerlo de forma secuencial. Y como tampoco permite acceder a elementos de un array a partir de índices no constantes, utilizaremos una variable donde almacenar la esfera más cercana, para recuperarla en caso de intersección, véase el código.
+
+\begin{lstlisting}
+vec4 ray_color(Ray r, Sphere S[ARRAY_TAM], int num_spheres, 
+    Plane ground,
+    Directional_light lights[ARRAY_TAM], int num_lights) {
+    
+    Hit_record hr; hr.hit = false;  // Hit_record structure
+    float dist = MAX_DIST;          // Distancia a cada objeto 
+    vec3 p = r.orig;                // Punto del rayo
+    float closest_dist = MAX_DIST;  // Menor distancia
+    float current_t = 0.0;          // p=orig+current_t*dir
+    vec4 tmp_color;                 // Color temporal
+    Sphere S_hit;                   // Esfera mas cercana
+    
+    int object_index;   // 0,...,num_spheres-1: esferas,
+                        // num_spherees: plano
+    // Ray Marching
+    for(int i = 0; i < MAX_STEPS; i++) {
+        // Calculamos el objeto mas cercano
+        closest_dist = MAX_DIST;
+
+        // Distancia a las esferas
+        for(int i = 0; i < ARRAY_TAM; i++) {
+            if(i == num_spheres) break;
+            dist = get_dist_sphere(p, S[i]);
+            if(dist < closest_dist) {
+                closest_dist = dist;
+                object_index = i;
+                S_hit = S[i];
+            }
+        }
+
+        // Distancia al suelo
+        dist = get_dist_plane(p, ground);
+        if(dist < closest_dist) {
+            closest_dist = dist;
+            object_index = num_spheres;
+        }
+    
+        // closest_dist almacena la menor de las distancias
+        // y object_index el indice del objeto mas cercano
+        if(closest_dist < u_epsilon){   // Hay interseccion
+
+            hr.hit = true;
+            hr.t = current_t;
+            hr.p = ray_at(r, hr.t);
+
+            if(object_index == num_spheres){ // Suelo
+                // Codigo de interseccion con el suelo ...
+            }
+
+            else {      // Una de las esferas
+                // Codigo de interseccion con S_hit
+            }
+        }
+
+        // Si no hay interseccion, avanzamos en el rayo
+        current_t += closest_dist;
+        p = ray_at(r, current_t);
+
+        // Si estamos muy lejos acabamos el bucle
+        if(current_t >= MAX_DIST) break;
+    }
+    // No hay interseccion
+    // Background code ...       
+}
+\end{lstlisting}
+
+Fíjese que concuerda con la estructura que describe el algoritmo \ref{alg:Ray-Marching}. Hecha esta modificación, el resultado fijando ciertos parámetros dinámicamente es el mostrado en la imagen \ref{fig:esferas-RM}. Tal y como adelantamos, el resultado es igual que cuando calculábamos las intersecciones exactas, ya que realmente lo único que cambia es la forma de calcular las intersecciones, nada estrictamente visual.
+
+\begin{figure} [ht]
+    \centering
+    \includegraphics[scale = 0.37]{img/C8/esferas-ray-marching.png}
+    \caption{Escena tras implementar Ray-Marching}
+    \label{fig:esferas-RM}
+\end{figure}
+
+Recordamos e insistimos en que el vector director del rayo \verb|r.dir| debe ser un vector normalizado, es decir, unitario. De otro modo los avances en el rayo no estarán controlados, obsérvese en la imagen \ref{fig:vectores-no-normalizados} los resultados obtenidos al no normalizar el vector director al crear el rayo.
+
+\begin{figure} [ht]
+    \centering
+    \includegraphics[scale = 0.3]{img/C8/vectores-no-normalizados.png}
+    \caption{Escena utilizando vectores no unitarios en los rayos}
+    \label{fig:vectores-no-normalizados}
+\end{figure}
+
+\subsection{Comentarios sobre Ray-Marching}
+
+Una vez hemos introducido e implementado el algoritmo Ray-Marching, el lector es posible que piense que es una forma menos exacta y además menos eficiente que calcular analíticamente las intersecciones con los cuerpos. Es cierto que en casos como el de esferas o planos cuyas ecuaciones implícitas y sus intersecciones con rayos están muy bien definidos y son sencillas de calcular aplicar ray-marching ralentiza el procesado. Sin embargo muchas superficies, como es el caso de los fractales, no cuentan con una ecuación implícita que la defina. Otras sí cuentan con ecuaciones implícitas pero estas son muy difíciles de resolver. En este último caso se pueden aplicar métodos numéricos para aproximar las soluciones, que son métodos precisamente iterativos. 
+
+Sin embargo, ray-marching sólo necesita, para cada cuerpo, una función que aproxime suficientemente bien la distancia a un conjunto. A partir de un rayo y dichas funciones se puede aplicar ray-marching, de forma que se converge finalmente al punto de intersección. Por contra, si buscamos intersecciones analíticas hay que resolver ecuaciones, en ocasiones para acabar aproximando las soluciones, y retener la más pequeña.
+
+Un aspecto a destacar de ray-marching es la dependencia de sus parámetros. Es importante fijar un valor $\varepsilon$ adecuado, ya que si es demasiado grande puede brindarnos resultados muy pobres. En la imagen \ref{fig:esferas-RM} se ha utilizado $\varepsilon=0.001$ y nos da un resultado muy bueno, pero obsérvese en la imagen \ref{fig:epsilon-grande} qué ocurre si se fija $\varepsilon=0.1$. Los límites de los cuadrados del suelo se distorsionan y las apariencias de las esferas también se ven muy resentidas. Sin embargo es cierto que a mayor valor de $\varepsilon$ menos iteraciones y por tanto más velocidad, pero los resultados son peores. Es por tanto necesario utilizar valores de $\varepsilon$ adecuados a la situación, siendo suficientemente pequeños como para obtener un buen resultado pero suficientemente grandes como para que sea computacionalmente viable.
+
+\begin{figure} [ht]
+    \centering
+    \includegraphics[scale = 0.3]{img/C8/epsilon-grande.png}
+    \caption{Escena renderizada utilizando $\varepsilon=0.1$}
+    \label{fig:epsilon-grande}
+\end{figure}
+
+Una reflexión similar se puede aplicar al parámetro que define el número máximo de iteraciones (\verb|MAX_STEPS|). Pensemos en un rayo que pasa muy cerca de un objeto pero no llega a intersecarlo, sino que finalmente interseca al suelo. Durante las iteraciones que el rayo pase cerca del objeto quizá avance muy lentamente durante varias iteraciones, pues la distancia mínima es la distancia a dicho objeto que es pequeña. Este hecho puede provocar que se alcance el número máximo de iteraciones, considerando así que el rayo no golpea ningún objeto y asignándole el color de fondo cuando realmente con algunas iteraciones más podría alcanzarse la intersección con el suelo. Este hecho se puede observar en la imagen \ref{fig:pocas-iteraciones}, donde se ha utilizado \verb|MAX_STEPS=100|. Fíjese en las fronteras entre el horizonte y las esferas, o en los bordes de las esferas.
+
+\begin{figure} [ht]
+    \centering
+    \includegraphics[scale = 0.3]{img/C8/pocas-iteraciones.png}
+    \caption{Escena renderizada utilizando MAX\_STEPS=100}
+    \label{fig:pocas-iteraciones}
+\end{figure}
+
+De igual forma, menos iteraciones implica más rapidez, pero peores resultados, por lo que es necesario fijar un valor correcto.
+
+\section{Signed Distance Functions (SDFs)}
+\label{section:SDFs}
+
