Introducidas matemáticas de las SDFs (#49)

--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -49,4 +49,6 @@
 
 \bibitem{Hart-1995} Hart, J. (1995). Sphere Tracing: A Geometric Method for the Antialiased Ray Tracing of Implicit Surfaces. \textit{The Visual Computer}. \url{https://doi.org/10.1007/s003710050084}
 
+\bibitem{3D-SDFs} Quilez, I. (s. f.). \textit{3D SDFs}. Íñigo Quilez. Recuperado 14 de mayo de 2022, de \url{https://iquilezles.org/articles/distfunctions/}
+
 \end{thebibliography}
